# atap-annotator

./: .gitignore  DOCS.md  README.md  annotator.ipynb  pyproject.toml
atap_annotator/: CorpusAnnotator.py  __init__.py
atap_annotator/annotator/: Annotator.py  CategoryControls.py  DocumentDisplay.py  MetaDisplay.py  Navigator.py  SettingsControls.py
